--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <label for="Bill">
                 <p>Quanto ficou a conta?</p>
             </label>
+            <p>
+                R$ <input type="number" placeholder="100" name="Bill">
+            </p>
         </form>
     </div>
 </body>
