--- a/index.html
+++ b/index.html
@@ -15,7 +15,19 @@
                 <p>Quanto ficou a conta?</p>
             </label>
             <p>
-                R$ <input type="number" placeholder="100" name="Bill">
+                R$ <input type="number" placeholder="100" name="Bill" id="Bill">
+            </p>
+            <label for="ServiceQuality">
+                <p>Como foi o serviço?</p>
+            </label>
+            <p>
+                <select name="ServiceQuality" id="ServiceQuality">
+                    <option>30% - Incrível</option>
+                    <option>20% - Ótimo</option>
+                    <option>10% - Bom</option>
+                    <option>05% - Regular</option>
+                    <option>00% - Ruim</option>
+                </select>
             </p>
         </form>
     </div>
