--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </label>
             <input type="number" placeholder="10" name="AllPeople" id="AllPeople"> pessoa(s)
             </p>
+            <button type="submit">Calcular</button>
         </form>
     </div>
 </body>
