--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Calculadora de Gorjeta</title>
 </head>
 <body>
-    <div>
+    <div id="container">
+        <div>
         <h1>Calculadora de Gorjeta</h1>
-    </div>
-    <div>
+        </div>
+        <div>
         <form>
             <label for="Bill">
                 <p>Quanto ficou a conta?</p>
@@ -38,6 +39,7 @@
             </p>
             <button type="submit">Calcular</button>
         </form>
+        </div>
     </div>
 </body>
 </html>
